--- a/kunskapskontroll_1_1_NumPy.ipynb
+++ b/kunskapskontroll_1_1_NumPy.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "7b3678cd",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "31d39235",
    "metadata": {},
    "outputs": [
@@ -56,7 +56,7 @@
        "2"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "b3f68e77",
    "metadata": {},
    "outputs": [
@@ -77,7 +77,7 @@
        "(3, 5)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "e6918ea0",
    "metadata": {},
    "outputs": [
@@ -98,7 +98,7 @@
        "15"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "55d023d3",
    "metadata": {},
    "outputs": [
@@ -119,7 +119,7 @@
        "dtype('int32')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "a7053fbb",
    "metadata": {},
    "outputs": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "id": "a73e316c",
    "metadata": {},
    "outputs": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "id": "655c611c",
    "metadata": {},
    "outputs": [
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "id": "13c74d6c",
    "metadata": {},
    "outputs": [
@@ -222,7 +222,7 @@
        "       [48., 48., 48.]])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "id": "f8a9166b",
    "metadata": {},
    "outputs": [
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "id": "f03f24f7",
    "metadata": {},
    "outputs": [
@@ -296,7 +296,7 @@
        "       [1.09663316e+03, 2.98095799e+03, 8.10308393e+03]])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "id": "2bf22260",
    "metadata": {},
    "outputs": [
@@ -325,7 +325,7 @@
        "1"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "id": "e44041a7",
    "metadata": {},
    "outputs": [
@@ -354,7 +354,7 @@
        "array([1, 4, 7])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "id": "3922610d",
    "metadata": {},
    "outputs": [
@@ -383,7 +383,7 @@
        "array([1, 2, 3])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 17,
    "id": "e6af4bc0",
    "metadata": {},
    "outputs": [
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 18,
    "id": "0089e645",
    "metadata": {},
    "outputs": [
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 19,
    "id": "73e7b17e",
    "metadata": {},
    "outputs": [
@@ -468,7 +468,7 @@
        "45"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 20,
    "id": "dbd0d2b0",
    "metadata": {},
    "outputs": [
@@ -499,7 +499,7 @@
        "array([4., 5., 6.])"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 21,
    "id": "80179eaf",
    "metadata": {},
    "outputs": [
@@ -530,7 +530,7 @@
        "array([4., 5., 6.])"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 22,
    "id": "9c8abf56",
    "metadata": {},
    "outputs": [
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 23,
    "id": "69415f7b",
    "metadata": {},
    "outputs": [
@@ -581,7 +581,7 @@
        "array([ 6,  7,  8,  9, 10])"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 24,
    "id": "9459864f",
    "metadata": {},
    "outputs": [
@@ -628,7 +628,7 @@
        "       [11, 12, 13, 14, 15]])"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 25,
    "id": "a671bb5a",
    "metadata": {},
    "outputs": [
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 26,
    "id": "f4e443a0",
    "metadata": {},
    "outputs": [
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 27,
    "id": "f8f9b26f",
    "metadata": {},
    "outputs": [
@@ -766,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 28,
    "id": "1fd46778",
    "metadata": {},
    "outputs": [
@@ -795,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 29,
    "id": "5e6ef2e4",
    "metadata": {},
    "outputs": [
@@ -814,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 30,
    "id": "e2cbae26",
    "metadata": {},
    "outputs": [
@@ -856,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "id": "3506f977-ac0a-473f-85bc-eec9f35dc498",
    "metadata": {},
    "outputs": [],
@@ -883,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 32,
    "id": "5af1763f",
    "metadata": {},
    "outputs": [],
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 33,
    "id": "917ef873",
    "metadata": {},
    "outputs": [
@@ -905,7 +905,7 @@
        "       [12,  9,  9]])"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -916,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 34,
    "id": "58c201c4",
    "metadata": {},
    "outputs": [
@@ -927,7 +927,7 @@
        "       [32, 70]])"
       ]
      },
-     "execution_count": 170,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -946,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 63,
    "id": "89df88af-3668-4d98-a0a4-e6d92eea0f89",
    "metadata": {},
    "outputs": [
@@ -954,12 +954,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "(2,)\n",
       "[20 15]\n",
       "[12  9]\n",
       "[32 24]\n",
       "[32 24]\n",
       "[12  9]\n",
       "(2,)\n",
+      "[8 6]\n",
       "The norm is: 5.0\n"
      ]
     }
@@ -970,6 +972,8 @@
     "x = np.array([4 ,3])\n",
     "\n",
     "# a. 1x2\n",
+    "print(x.shape)\n",
+    "\n",
     "# b.\n",
     "result_a = x * 5\n",
     "print (result_a)\n",
@@ -990,7 +994,8 @@
     "# g.\n",
     "print(x.T.shape)\n",
     "\n",
-    "# h. Nej\n",
+    "# h. Nej men numpy broadcastar\n",
+    "print(x + x.T)\n",
     "\n",
     "# i.\n",
     "norm = np.linalg.norm(x)\n",
@@ -999,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 36,
    "id": "54102845",
    "metadata": {},
    "outputs": [
@@ -1019,7 +1024,7 @@
        "(4, 1)"
       ]
      },
-     "execution_count": 204,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1036,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 37,
    "id": "8e872b21",
    "metadata": {},
    "outputs": [
@@ -1059,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 38,
    "id": "b0bd28b6",
    "metadata": {},
    "outputs": [
@@ -1072,7 +1077,7 @@
        "       [77]])"
       ]
      },
-     "execution_count": 209,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1086,7 +1091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 39,
    "id": "22a832f4",
    "metadata": {},
    "outputs": [
@@ -1099,7 +1104,7 @@
        "       [22]])"
       ]
      },
-     "execution_count": 214,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1113,7 +1118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 40,
    "id": "7ed9e312",
    "metadata": {},
    "outputs": [
@@ -1134,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 41,
    "id": "03f90e66",
    "metadata": {},
    "outputs": [
@@ -1159,7 +1164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 42,
    "id": "324e72bc",
    "metadata": {},
    "outputs": [
@@ -1179,7 +1184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 43,
    "id": "76f6835b",
    "metadata": {},
    "outputs": [
@@ -1189,7 +1194,7 @@
        "4.47213595499958"
       ]
      },
-     "execution_count": 239,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1212,7 +1217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 44,
    "id": "65371610-16e1-48b2-b7fb-65e49002608a",
    "metadata": {},
    "outputs": [],
@@ -1229,7 +1234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 45,
    "id": "0ce8489f",
    "metadata": {},
    "outputs": [
@@ -1240,7 +1245,7 @@
        "       [ 2, -2,  2]])"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1253,7 +1258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 46,
    "id": "98c8fd2c",
    "metadata": {},
    "outputs": [
@@ -1264,7 +1269,7 @@
        "       [ 0, -2, -4]])"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1276,7 +1281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 47,
    "id": "58f82e0f",
    "metadata": {},
    "outputs": [
@@ -1287,7 +1292,7 @@
        "       [ 4, -1]])"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1299,7 +1304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 48,
    "id": "f5c46ada",
    "metadata": {},
    "outputs": [
@@ -1310,7 +1315,7 @@
        "       [2, 3]])"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1322,7 +1327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 49,
    "id": "f86b936b",
    "metadata": {},
    "outputs": [
@@ -1333,7 +1338,7 @@
        "       [12,  9]])"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1345,7 +1350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 50,
    "id": "24d10cdf",
    "metadata": {},
    "outputs": [
@@ -1356,7 +1361,7 @@
        "       [-4, -4]])"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1368,7 +1373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 51,
    "id": "88bbcfb4",
    "metadata": {},
    "outputs": [],
@@ -1379,7 +1384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 52,
    "id": "6dfa6f02",
    "metadata": {},
    "outputs": [],
@@ -1390,7 +1395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 53,
    "id": "08ee3947",
    "metadata": {},
    "outputs": [
@@ -1401,7 +1406,7 @@
        "       [10, 11]])"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1413,7 +1418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 54,
    "id": "059ecbeb",
    "metadata": {},
    "outputs": [
@@ -1424,7 +1429,7 @@
        "       [ 10,  -8,   0]])"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1436,7 +1441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 55,
    "id": "503be6d2",
    "metadata": {},
    "outputs": [
@@ -1447,7 +1452,7 @@
        "       [2, 1]])"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1459,7 +1464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 56,
    "id": "73798a00",
    "metadata": {},
    "outputs": [
@@ -1470,7 +1475,7 @@
        "       [7, 4]])"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1482,7 +1487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 57,
    "id": "3320deb9",
    "metadata": {},
    "outputs": [
@@ -1507,7 +1512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 58,
    "id": "c55d20f0",
    "metadata": {},
    "outputs": [
@@ -1558,7 +1563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 59,
    "id": "5b9ef4df",
    "metadata": {},
    "outputs": [
@@ -1580,7 +1585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 60,
    "id": "d2440489",
    "metadata": {},
    "outputs": [
@@ -1601,7 +1606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 61,
    "id": "c8752807",
    "metadata": {},
    "outputs": [
